fixed mobile horizontal scroll bar in index.html

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -165,6 +165,10 @@ body {
 				padding-top: 40px;
 			}
 
+			@media @tablet {
+				width: 100%;
+			}
+
 			.navlink {
 			box-sizing: border-box;
 			.flex(initial, center);
@@ -215,14 +219,14 @@ body {
 				width: 100%;
 				position: inherit;
 				top: none;
-				margin-left: 10px;
+				margin-left: 0;
 				text-align: center;
 			}
 			@media @tablet {
 				width: 100%;
 				position: inherit;
 				top: none;
-				margin-left: 10px;
+				margin-left: 0;
 				text-align: center;
 			}
 
